crates/uitest/fixtures/ty/def/trait_impl_nested_projection_arg_missing_bound.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/trait_impl_nested_projection_arg_missing_bound.fe
---
error[6-0003]: trait bound is not satisfied
   ┌─ trait_impl_nested_projection_arg_missing_bound.fe:10:6
   │
10 │ impl Foo< <Missing as Bound>::Item > for S {}
   │      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Missing` doesn't implement `Bound`

error[6-0003]: trait bound is not satisfied
   ┌─ trait_impl_nested_projection_arg_missing_bound.fe:12:17
   │
12 │ fn needs_foo<T: Foo< <Missing as Bound>::Item >>(_value: T) {}
   │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Missing` doesn't implement `Bound`

error[6-0003]: trait bound is not satisfied
   ┌─ trait_impl_nested_projection_arg_missing_bound.fe:15:5
   │
15 │     needs_foo(value)
   │     ^^^^^^^^^ `S` doesn't implement `Foo<Missing::Item>`
